# azurlane-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: error.rs  lib.rs  model.rs  requester.rs
