[package]
name = "azurlane"
description = "Wrapper for the unofficial azur lane json api in Rust"
version = "1.0.0"
authors = ["KurozeroPB <root@kurozeropb.info>"]
edition = "2018"
categories = ["api-bindings", "web-programming"]
documentation = "https://docs.rs/azurlane"
homepage = "https://github.com/azurlane-api/azurlane-rs"
keywords = ["api", "http", "azurlane"]
license = "GPL-3.0"
repository = "https://github.com/azurlane-api/azurlane-rs.git"

[dependencies]
reqwest = "^0.9"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
